For working with classes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "git.autofetch": true,
-    "powershell.debugging.createTemporaryIntegratedConsole": false
+    "powershell.debugging.createTemporaryIntegratedConsole": true
     
 }
